--- a/javascript-typing-tutor/styles.css
+++ b/javascript-typing-tutor/styles.css
@@ -18,3 +18,14 @@ span.red {
 span.green {
   color: rgb(47 255 92);
 }
+
+span.black {
+  color: black;
+  text-decoration: underline solid black 5px;
+}
+
+span.one {
+  color: black;
+  text-decoration: underline solid black 10px;
+  border-bottom: black 5px solid;
+}
